--- a/Q-A-App(Android)/app/src/main/res/layout/activity_add_answer.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/activity_add_answer.xml
@@ -5,11 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/webView"
+    <include
+        layout="@layout/rich_editor"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/submitAnswerButton"
