--- a/Q-A-App(Android)/app/src/main/res/layout/fragment_profile.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/fragment_profile.xml
@@ -26,5 +26,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logout"
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="内容"
+        >
+
+    </TextView>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/profile_tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabGravity="fill"
+        app:tabMode="fixed"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/profile_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
 </LinearLayout>
