--- a/Q-A-App(Android)/app/src/main/res/layout/fragment_qa.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/fragment_qa.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragmentLayout"
     android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="QA-App"
+        app:title="Q&amp;A"
         >
 
     </com.google.android.material.appbar.MaterialToolbar>
@@ -37,8 +38,6 @@
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintMarginBottom="16dp"
-        app:layout_constraintMarginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginRight="16dp" /> />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
