--- a/Q-A-App(Android)/app/src/main/res/layout/activity_add_answer.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/activity_add_answer.xml
@@ -14,6 +14,6 @@
         android:id="@+id/submitAnswerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="提交回答"/>
-
 </LinearLayout>
