--- a/Q-A-App(Android)/app/src/main/res/layout/fragment_qa.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/fragment_qa.xml
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/add_question_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
