--- a/Q-A-App(Android)/app/src/main/res/layout/fragment_qa.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/fragment_qa.xml
@@ -38,6 +38,7 @@
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="16dp" /> />
+        android:layout_marginRight="16dp"
+        android:contentDescription="添加一个问题" /> />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
