--- a/Q-A-App(Android)/app/src/main/res/values-night/themes.xml
+++ b/Q-A-App(Android)/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.ProblemSolvingApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.ProblemSolvingApp" parent="Theme.Material3.DayNight">
     </style>
 </resources>
