--- a/Q-A-App(Android)/app/src/main/res/values/themes.xml
+++ b/Q-A-App(Android)/app/src/main/res/values/themes.xml
@@ -1,5 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.ProblemSolvingApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.ProblemSolvingApp" parent="Theme.Material3.DayNight">
     </style>
-    <style name="Theme.ProblemSolvingApp" parent="Base.Theme.ProblemSolvingApp" />
 </resources>
