--- a/Q-A-App(Android)/app/src/main/res/layout/activity_question_detail.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/activity_question_detail.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -22,143 +21,156 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <TextView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/question_title"
-        android:textSize="24sp"
-        android:gravity="center_horizontal"/>
-
-    <WebView
-        android:id="@+id/question_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/tags_flexbox_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:flexWrap="wrap"
-        app:justifyContent="flex_start"
-        app:alignItems="stretch"
-        android:padding="8dp">
-    </com.google.android.flexbox.FlexboxLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!-- Likes, Views, Comments layouts aligned to parent's right -->
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
-            android:id="@+id/card_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:orientation="horizontal"
-            android:paddingEnd="8dp"
-            tools:ignore="RtlSymmetry">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/question_title"
+                android:textSize="24sp"
+                android:gravity="center_horizontal"/>
 
-            <!-- Likes -->
+            <WebView
+                android:id="@+id/question_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <!-- Views -->
-            <include
-                android:id="@+id/ques_likes"
-                layout="@layout/small_card_approves" />
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/tags_flexbox_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:flexWrap="wrap"
+                app:justifyContent="flex_start"
+                app:alignItems="stretch"
+                android:padding="8dp">
+            </com.google.android.flexbox.FlexboxLayout>
 
-            <include
-                android:id="@+id/ques_views"
-                layout="@layout/small_card_views" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <!-- Comments -->
-            <include
-                android:id="@+id/ques_comments"
-                layout="@layout/small_card_reviews" />
+                <!-- Likes, Views, Comments layouts aligned to parent's right -->
+                <LinearLayout
+                    android:id="@+id/card_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:orientation="horizontal"
+                    android:paddingEnd="8dp"
+                    tools:ignore="RtlSymmetry">
+
+                    <!-- Likes -->
+
+                    <!-- Views -->
+                    <include
+                        android:id="@+id/ques_likes"
+                        layout="@layout/small_card_approves" />
+
+                    <include
+                        android:id="@+id/ques_views"
+                        layout="@layout/small_card_views" />
+
+                    <!-- Comments -->
+                    <include
+                        android:id="@+id/ques_comments"
+                        layout="@layout/small_card_reviews" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingEnd="8dp"
+                android:gravity="end">
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/action_approve"
+                    android:text="赞同"
+                    style="?attr/materialButtonOutlinedStyle"
+                    />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="不赞同"
+                    android:id="@+id/action_disapprove"
+                    style="?attr/materialButtonOutlinedStyle"
+
+                    android:layout_marginStart="16dp" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="64dp"
+                android:text="评论"
+                android:textSize="20sp"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+
+                android:id="@+id/recyclerview_comments"
+                android:paddingStart="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="vertical"
+                android:nestedScrollingEnabled="false"
+                />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="8dp">
+
+                <Button
+                    android:id="@+id/btn_add_review"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+
+                    android:text="添加评论"
+                    />
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="回答"
+                android:textSize="20sp"
+                android:layout_marginLeft="16dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginLeft="16dp"
+                android:id="@+id/recyclerview_answers"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:nestedScrollingEnabled="false"
+                android:orientation="vertical"/>
+            <Button
+                android:id="@+id/add_new_answer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="?attr/materialButtonOutlinedStyle"
+                android:text="添加回答"
+                android:layout_margin="8dp"
+                />
         </LinearLayout>
-    </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingEnd="8dp"
-        android:gravity="end">
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/action_approve"
-            android:text="赞同"
-            style="?attr/materialButtonOutlinedStyle"
-             />
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="不赞同"
-            android:id="@+id/action_disapprove"
-            style="?attr/materialButtonOutlinedStyle"
-
-            android:layout_marginStart="16dp" />
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="64dp"
-        android:text="评论"
-        android:textSize="20sp"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-
-        android:id="@+id/recyclerview_comments"
-        android:paddingStart="64dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"/>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingEnd="8dp">
-
-        <Button
-            android:id="@+id/btn_add_review"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-
-            android:text="添加评论"
-            />
-
-    </RelativeLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="回答"
-        android:textSize="20sp"
-        android:layout_marginLeft="16dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginLeft="16dp"
-        android:id="@+id/recyclerview_answers"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"/>
-    <Button
-        android:id="@+id/add_new_answer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?attr/materialButtonOutlinedStyle"
-        android:text="添加回答"
-        android:layout_margin="8dp"
-        />
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
