--- a/Q-A-App(Android)/app/src/main/res/layout/rich_editor.xml
+++ b/Q-A-App(Android)/app/src/main/res/layout/rich_editor.xml
@@ -13,7 +13,8 @@
         android:layout_height="0dp"
         android:layout_weight="0.8"
         android:gravity="top"
-        android:inputType="textMultiLine"/>
+        android:inputType="textMultiLine"
+        android:autofillHints="" />
 
     <LinearLayout
         android:layout_width="match_parent"
