--- a/Q-A-App(Android)/app/src/main/res/values/themes.xml
+++ b/Q-A-App(Android)/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.ProblemSolvingApp" parent="Theme.Material3.DayNight">
+    <style name="Theme.ProblemSolvingApp" parent="Theme.Material3.DayNight.NoActionBar">
+
     </style>
 </resources>
